# manger

./: .gitignore  Cargo.toml  README.md  Trunk.toml  copy_deploy.sh  index.html  release.sh  remote_script.sh
digitalocean/: Dockerfile  README.md  push_registry.sh  start.sh
purse/: Anchor.toml
purse/programs/purse/: Cargo.toml
purse/programs/purse/src/: lib.rs
purse/tests/: purse.ts
src/: context.rs  main.rs  route.rs  store.rs  svg.rs  util.rs
src/api/: bible.rs  svg.rs
src/components/: background.rs  button.rs  cbutton.rs  contactbar.rs  copyright.rs  footer.rs  glass.html  header.rs  mod.rs  safearea.rs  searchbar.rs  sidebar.rs  tabbar.rs  toast.rs  togglemode.rs
src/pages/: app.rs  chat.rs  home.rs  index.rs  mod.rs  people.rs  profile.rs
src/pages/bible/: api.rs  bible.rs  content.rs  db.rs  index.rs  intro.rs  mod.rs  navbar.rs  store.rs  toc.rs  util.rs
src/pages/chat/: chat.rs  content.rs  footer.rs  index.rs  mod.rs  navbar.rs
src/pages/home/: home.rs  index.rs  mod.rs  pwa_install.rs  sidebar.rs
src/pages/profile/: account.rs  index.rs  mod.rs  preference.rs  profile.rs
static/: 404.html  index.html  main.css  main.min.css  manifest.json  test.html
static/assets/: svg.json
static/assets/css/: bible.css  card.css  chat.css  chatarea.css  contactbar.css  header.css  icons.css  main.css  navbar.css  responsive.css  sidebar.css  tabbar.css  themeswitch.css  toast.css
static/bible/: book_names_en.json  book_names_zh_s.json  book_names_zh_t.json
static/bible/en/kjv/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+27 more)
static/bible/zh/: tmp.json
static/bible/zh/cnv_t/: 1.json  10.json  11.json  12.json  13.json  15.json  16.json  2.json  21.json  28.json  29.json  3.json  32.json  35.json  36.json  37.json  4.json  41.json  42.json  45.json  46.json  47.json  48.json  5.json  51.json  53.json  54.json  55.json  56.json  6.json  61.json  62.json  63.json  65.json  7.json
static/bible/zh/cuv_t/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+26 more)
static/css/: _bible.scss  _header.scss  bible.css  card.css  header.css  icons.css  index.scss  main.css  responsive.css  tabbar.css  toast.css
static/scss/: index.scss
static/scss/abstracts/: _mixins.scss
static/scss/base/: _colors.scss  _fonts.scss  _index.scss  _reset.scss
static/scss/components/: _avatar.scss  _bible.scss  _card.scss  _chat.scss  _checkbox.scss  _contactbar.scss  _dropdown.scss  _header.scss  _icons.scss  _main.scss  _navbar.scss  _person.scss  _responsive.scss  _sidebar.scss  _tabbar.scss  _themeswitch.scss  _toast.scss  index.scss
static/scss/components/icons/: _attachment.scss  _chevron.scss  _cross.scss  _home.scss  _profile.scss  _smile.scss  _sun.scss  index.scss
static/scss/layout/: _contactbar.scss  _header.scss  _navbar.scss  _safearea.scss  _sidebar.scss  _tabbar.scss  index.scss
static/scss/pages/: _bible.scss  _chat.scss
static/scss/themes/: _dark.scss  _light.scss
www/: CNAME  README.md  test.html
www/bible/: table_of_contents.json
www/bible/en/kjv/: 10.json  18.json  19.json  2.json  21.json  23.json  25.json  3.json  31.json  32.json  35.json  37.json  38.json  39.json  43.json  44.json  47.json  5.json  51.json  52.json  55.json  57.json  58.json  63.json  65.json  66.json  7.json
www/bible/zh/cnv_t/: 1.json  14.json  17.json  18.json  19.json  20.json  22.json  23.json  24.json  25.json  26.json  27.json  30.json  31.json  33.json  34.json  38.json  39.json  4.json  40.json  43.json  44.json  49.json  5.json  50.json  52.json  57.json  58.json  59.json  6.json  60.json  64.json  66.json  8.json  9.json
www/bible/zh/cuv_t/: 11.json  12.json  13.json  14.json  17.json  20.json  21.json  23.json  24.json  26.json  27.json  30.json  31.json  32.json  35.json  36.json  42.json  45.json  47.json  49.json  50.json  51.json  52.json  53.json  54.json  55.json  57.json  58.json  6.json  7.json  8.json  toc.json
www/scss/components/: _bg-button.scss  _person.scss  _popup.scss  _searchbar.scss  _status.scss  _video-bg.scss
www/scss/components/icons/: _image.scss  _moon.scss  _readme.scss
www/scss/layout/: _contactbar.scss  _safearea.scss
www/scss/pages/: _bible.scss  _chat.scss  index.scss
www/scss/themes/: _index.scss
