[package]
name = "manger"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.79"
sycamore = { git = "https://github.com/sycamore-rs/sycamore", features = ["serde", "suspense"] }
sycamore-router = { git = "https://github.com/sycamore-rs/sycamore" }
uuid = { version = "0.8.2", features = ["serde", "v4", "wasm-bindgen"] }
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.29"
rexie = "0.3.0"
reqwasm = "0.5.0"
js-sys = "0.3.56"
gloo-timers = { version = "0.2.3", features = ["futures"] }

[dependencies.web-sys]
features = [
    "Selection", "InputEvent", "KeyboardEvent", "Location", "MediaQueryList", "Storage",  "ScrollIntoViewOptions", "ScrollBehavior", "Element", "ScrollToOptions",
    "Window"
]
version = "0.3.56"