[package]
name = "manger"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sycamore = { git = "https://github.com/sycamore-rs/sycamore", features = ["serde", "suspense"] }
sycamore-router = { git = "https://github.com/sycamore-rs/sycamore" }
uuid = "1.0.0"
wasm-bindgen-futures = "0.4.30"
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
rexie = "0.4.1"
reqwasm = "0.5.0"
js-sys = "0.3.57"
gloo-timers = { version = "0.2.4", features = ["futures"] }
num-traits = { version = "0.2.14", default-features = false }
serde-wasm-bindgen = "0.4.2"

[dependencies.web-sys]
features = [
    "Selection", 
    "InputEvent", "KeyboardEvent", "MessageEvent",
    "Location", "MediaQueryList", "Storage",  "ScrollIntoViewOptions", "ScrollBehavior",  "ScrollToOptions",
    "Window", "Document", "Element",
    "console",
    "DomException",
    "DomStringList",
    "Event",
    "IdbCursorWithValue", "IdbCursorDirection", "IdbDatabase", "IdbFactory", "IdbIndex", "IdbIndexParameters", "IdbKeyRange", "IdbObjectStore", 
    "IdbObjectStoreParameters", "IdbOpenDbRequest", "IdbOpenDbOptions", "IdbRequest", "IdbTransaction", "IdbTransactionMode", "StorageType",
    "RtcPeerConnection", "RtcSignalingState", "RtcSdpType", "RtcSessionDescriptionInit", "RtcPeerConnectionIceEvent", "RtcIceCandidate",
    "RtcIceCandidateInit", "RtcIceConnectionState", "RtcDataChannel", "RtcDataChannelEvent", "RtcSessionDescription",
    "RtcIceGatheringState", "RtcIceCredentialType", "RtcIceTransportPolicy", "RtcConfiguration", "Navigator", "RtcIceServer", "MediaDevices",
    "MediaStream", "MediaStreamConstraints",
    "WebSocket",
    "EventListener",
    "MouseEvent",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "ProgressEvent",
]
version = "0.3.57"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
